<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

<EditText
    android:id="@+id/et_keyword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/search_keyword"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_keyword"
        android:layout_alignParentTop="true"
        android:layout_marginTop="87dp"
        android:text="@string/limit" />

    <TextView
        android:id="@+id/tv_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="0dp"
        android:text="10" />

    <SeekBar
        android:id="@+id/sb_limit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="109dp"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="45dp"
        android:text="@string/btn_search" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="45dp"
        android:text="@string/btn_reset" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_keyword"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:text="@string/sort_by" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/sb_limit"
        android:layout_alignTop="@+id/textView3"
        android:text="@string/price" />

    <Switch
        android:id="@+id/switch_price_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="141dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch_price_date"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="93dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:text="@string/results" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_results"
        android:layout_width="350dp"
        android:layout_height="259dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/linlyt_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rv_results"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:elevation="2dp"
        android:padding="20dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loading" />
    </LinearLayout>


</RelativeLayout>